add swager doc and methods for profile agent
